<resources>
    <string name="app_name">Календар Садівника</string>
    <string name="january_lower">При прибиранні снігу в зимку, слідкуйте щоб він не лежав на газоні на одній купі, а був розподілений рівномірно. В січні потрібно подбати щоб по газону ніхто не ходив, для того аби він мав гарний вигляд весною, а також ящо на газоні буде кірка з льоду то її потрібно розбити граблями для кращого доступу повітря. Якщо на газоні з\'являться кроти то з ними потрібно поборотись препаратом "Фостоксин", або "Джин". </string>
    <string name="february_lower">У лютому догляд за газоном сильно не відрізняється від січня. В цьому місяці можна розпочати налаштовувавти садову техніку та механізми: замінити мастило в газонці та аераторі, наточити ножі, поремотувати зламаний інструмент, адже весною часу на це буде мало! Якщо на Вашій ділянці хороший шар снігу заввишки 20 – 25 см, то можете спати спокійно - він захистить газонні трави від вимерзання і буде хорошим джерелом вологи на початку весни. При тоншому сніговому покриві і дуже низьких температурах повітря, особливо в регіонах з сильними вітрами, рекомендується штучне збільшення товщини снігу на ділянці - снігозатримання.</string>
    <string name="march_lower">У березні потрібно подбати про виведення з газону талої води якщо така є, і не потрібно допускати витоптування газону, адже в цей період він дуже слабкий! Під час танення снігу не допускайте тривалого перезволоження ділянки, уникайте утворення калюж, проводячи наколювання сирих ділянок вилами з простими або порожнистими зубами. Щоб цим не довелося займатися, рекомендується проведення дренажних робіт осінню. Зведіть до мінімуму усі пересування по сирому газону, оскільки велика можливість утворення колії, слідів і вибоїн.</string>
    <string name="april_lower">В квітні температура повітря йде в гору, в цей період можна проводити аерацію, проколювання, вичісування газону. Також, можна підсіяти, залатати пошкоджені місця, провести внесення весняних комплексних добрив з великим вмістом азоту для активного росту норма внесення добрив, як правило, вказана на упаковках, що приблизно складе 1 кг на 40 кв.м.! В цей місяць потрібно боротись із грибковими захворюваннями, для цього краще обробити газон баковою сумішшю з декількох фунгіцидів, і можна обробити газон мідним купоросом від моху. </string>
    <string name="may_lower">Травень це період активного росту трави, тому на початку травня потрібно запустити систему поливу, потрібно провести першу стрижку трави при відростанні на висоту 8–10 см проведіть покіс, залишаючи 5–6 см і обов\'язково газонокосаркою з травозбірником. Не залишайте рослинні залишки на поверхні - це може привести до загнивання, і не косіть занадто низько - дайте газону відновитися після зими. Якщо у вас ще нема газону, саме час його створити, зверніть увагу на підбір насіння: воно має бути якісне краще німецького виробництва, і повинно підходити Вашим грунтово кліматичним умовам.</string>
    <string name="june_lower">В червні потрібно відрегулювати систему поливу, адже в жаркий період газон потребує більше вологи, полив має відбуватись не менше двох разів на ніч з розрахунку 4–7л на м²,якщо нема дощів. Траву потрібно стригти не нижче 4–5 см. І розпочинається період боротьби з бур\'янами, це можна зробити як гербіцидами вибіркової дії такими як "Гольф", "Діален", "Дікамба" та інші, або механічним шляхом прополюючи руками. Лисі місця на газоні підсіваєм і засипаєм піском. </string>
    <string name="july_lower">В липні догляд суттєво не відрізняється від червня, активний полив, але дивіться щоб не було перезволоження, можна внести ще азотних добрив якщо ваша трава слабко росте! Стрижка на рівні 6–7 см для захисту від спеки молодих паростків. Якщо ви побачили ознаки грибкових хвороб то обприскайте газон фунгіцидом «фундазол». З мурахами боремся препаратом «актара» змішаною з цукром.</string>
    <string name="august_lower">Серпень радикально не відрізняється від липня в догляді за газоном. В цьому місяці можна провести аерацію. Якщо Вам починають заважати кроти то з ними потрібно поборотись препаратом "Фостоксин", або "Джин". В цей період можна запіскувати газон  розсипавши по ньому рівномірний шар піску. Якщо заважають мурахи можете перемішати з цукром препарат "актара" і розкидати по газону.</string>
    <string name="september_lower">У вересні окрім стрижки газону можна внести осінні комплексні добрива з меншим вмісто азоту,але з більшою консентрацією калію, фосфору, магнію. Також, можна провести проколювання грунту на газоні адже від постійного поливу він ущільнюється і зменшується пористість що погіршує постачання поживних речовин, ріст трави!</string>
    <string name="october_lower"> В цьому місяці потрібно зменшити полив на газоні, а в кінці місяця його можна взагалі вимкнути і злити воду з труб на зиму. Косити тепер можна двічі на місяць. Зайвий раз сарайтесь не ходити по газону адже в цей час він перестає рости і відновлюватись після витоптування.</string>
    <string name="november_lower">Листопад не даремно так називають, в цей період потрібно прибрати листя з газону, скосити його останній раз на зиму до 3 см, і обробити газон препаратом "Максім" від гнилей та грибкових захворювань!</string>
    <string name="december_lower">В грудні можна встановити щит для захисту газону від снігових заносів, можна накрити його агроволокном, якщо на ньому утворитися кірка то розбийте її граблями. Якщо буде тепло і з\'являться кроти то з ними потрібно поборотись препаратом "Фостоксин", або "Джин". </string>
    <string name="january_flower">Якщо Ви хочете мати гарну клумбу влітку, то в січні потрібно розпочинати висівати в будинку насіння таких рослин як: гвоздика Шабо, лобелія, петунія, цинерарія, ротики, чина запашна, цинія, чорнобривці, настурція, космея, календула, резеда, герань, гербера, гайлардія, віола, братки, примула, бальзамін, бегонія, вербена, агератум, айстра, кларкія, флокси, левкой, сальвія, годеція, люпин, лаватера і багато інших. </string>
    <string name="february_flower">У лютому настав час висадити в преміщенні розсаду рослин, які добре почуваються і в саду, і в домашніх умовах – фуксії, бальзаміни, пеларгонії, і рослини раннього терміну цвітіння для підвісних кашпо, петунію і лобелію, наприклад. У лютому сіють насіння лаванди вузьколистої, сальвії блискучої, геліотропа. </string>
    <string name="march_flower">В березні ми можемо вирощувати ехінацею, тютюн, вербену, іберіс, клеому, дзвіночки, гвоздику-трав’янку, однорічний флокс, ротики, матіолу (левкой), брахікому іберісолисту й азаріну лазячу, а також ті квіти, які ви з якої-небудь причини не посіяли в лютому. В першу половину березня можна висівати насіння квітів, що добре зростають як у саду, і в домашніх умовах – пеларгонії, колеусу. У другу половину березня ми сіємо розсаду таких однорічників: флокс Друммонда, целозія, геліхрізум, алісум, венідіум, агератум, арктотіс, однорічна айстра, пенстемон, рицина. </string>
    <string name="april_flower">В квітні багато роботи по догляду за квітами. Потрібно прибрати укриття з троянд, провести обрізку, видалити оцвітину, відмерші рештки, провести обробку від хвороб препаратом"Хорус" та від шкідників таких як "Оленка волохата" препаратоп "Енжіо", або розставити сині миски з водою куди залетить шкідник. Можна внести азотні добрива для кращого росту та вегетації квітів. В цей період можна проводити пересадки, та створення нових клумб, міксбордерів, плям на газонах з квітів.</string>
    <string name="may_flower">В травні можна висівати у відкритий грунт однорічні квіти. В цей част можна висаджувати у відкритий грунт розсаду яку ми посіяли взимку. Також , можна розділити і пересадити багаторічники, провести прибирання в клумбах. В цей період розпочинається активний ріст бур\'яну, тому потрібно з ним боротись як мехенічно тобто ручним прополуванням, так і гербіцидами. Якщо нема дощу клумби потрібно поливати. З початку травня можна сіяти насіння волошки, календули, ешшольціі, космеи, резеди, декоративних маків. З другої половини травня можна сіяти такі квіти як цінія, настурція, чорнобривці, лаватера. В кінці травня настає слушний час для посіву дворічних квітів і багаторічних квітів. Ці насіння краще не садити на постійне місце, а висадити на окрему грядочку, а після сходів і появи 2–3 справжніх листочків вже пересадити на їх майбутнє місце в квітнику. Так висаджують віолу, маргаритки, незабудку, гвоздику турецьку, дзвоник середній, наперстянку. У наступні роки дворічники будуть давати самосів, тому у вас навесні будуть маленькі рослинки, які в травні добре буде розсаджувати на нові клумби. На жаль, в перше літо ці рослини дадуть тільки поодинокі квіточки, зате вже в наступному році вони будуть рясно цвісти все літо. Чорнобривці – всім відомий і багатьма дуже улюблений однорічник. При посіві у відкритий грунт зацвіте в липні. Календула – просто чемпіон по невибагливості серед квітів. Волошка – двухрічна рослина, сіяти її потрібно в травні, але зацвіте вона тільки наступного літа. Агератум – багаторічна рослина, яка цвіте з червня до самих заморозків. Його пухнасті суцвіття можуть бути найрізноманітніших забарвлень – рожеві, блакитні, сині, фіолетові, білі. Гвоздика турецька – дворічна рослина з квітками білого рожевою або червоною забарвлення, сіється насінням в кінці травня. Геленіум – ще один невибагливий багаторічник. Це чудові жовто-червоні «ромашки», квітучі все літо. Люпин – зараз виведено багато сортів з красивим забарвленням квіток – білий, рожевий, і блакитний. Але, на жаль, при самосіві в подальшому втрачає цей сортовий колір і сіянці наступного року будуть з синіми квіточками. Маргаритка – теж всім знайома улюблениця багатьох садівників. Просто приголомшливо невибаглива рослина.</string>
    <string name="june_flower">В червні стає доволі спекотно, тому потрібно не забувати про полив. Можна внести комплексні мінеральні та органічні добрива для багаторічних квітів, наприклад:  можна змішати  перегній з попелом, мінеральними добривами та водою в співвідношені 4:1:1:5 частин, після бродіння на протязі трьох тижнів розбавляти з в вдою в співіддношенні 1-на літра розчину на 5 літрів води. Повзучі та грунтопокривні рослини (обрієтта, флокс шиловидний, гусимець, горлянка) також після цвітіння потребують обрізки. Якщо центральна частина стебла у цих рослин дуже сильно заглибилася, необхідно їх розсадити — в червні або ж у кінці літа. Уже час розпочати сівбу насіння дворічників (маргариток, кампанули, гвоздик, дигіталісу, віоли, мальв, незабудок) і багаторічників (рудбекії, королиці, дельфініуму, центрантусу, лакфіолю, маку східного та інших). Посіви регулярно поливають (у міру пересихання верхнього шару грунту), знищують бур’яни. Через 15—20 днів після появи повних сходів починають пікірування.</string>
    <string name="line1">`Календар Садівника` створено за ініціативи Олексія Сороки, команди `Alexei Soroka garden service` та студії розробки `MOLFAR`.
        Інформація у календарі основується на досвіді багатьох поколінь науковців-ботаніків та садоводів-професіоналів. \n

        Alexei Soroka garden service можуть запропонувати:\n
\n
        - Консультацію по телефону \n
        - Разові послуги по догляду за рослинами\n
        - Комплексне обслуговування рослин
</string>
    <string name="line2">ТЕЛЕФОН +38 096 922 5322</string>
    <string name="line3">МІСЦЕ ЗНАХОДЖЕННЯ Київ, вул. Тимірязєвська\n
        ГРАФІК РОБОТИ 06:00 - 21:00\n
        Ціни на послуги Ви можете знати на сайті:</string>
    <string name="line4">
        <a href="https://www.sorokagarden.kiev.ua/">sorokagarden.kiev.ua</a>
        </string>
    <string name="line5">
        <a href="https://www.facebook.com/sorokagarden/">Facebook група Alexei Soroka garden service</a>
    </string>
    <string name="line6">
        <a href="https://www.facebook.com/groups/1000025753704278">Facebook група садівників</a>
    </string>
    <string name="line7">
        <a href="https://www.instagram.com/sorokagarden/">Instagram Alexei Soroka garden service</a>
    </string>
</resources>