<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_start2"
    tools:context=".Contact">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_type"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/soroka_logo_for_contact"
        app:layout_collapseMode="parallax"
        app:shapeAppearanceOverlay="@style/roundimageview"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/tv_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lumberjack"
            android:padding="8dp"
            android:textColor="#6ab04c"
            android:textSize="18sp"
            android:text="@string/line1"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lumberjack"
            android:padding="8dp"
            android:textColor="#6ab04c"
            android:textSize="18sp"
            android:text="@string/line2"
            android:textStyle="bold"
            android:autoLink="phone"
            />
        <TextView
            android:id="@+id/tv_line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lumberjack"
            android:padding="8dp"
            android:textColor="#6ab04c"
            android:textSize="18sp"
            android:text="@string/line3"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_line4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lumberjack"
            android:padding="8dp"
            android:textColor="#6ab04c"
            android:textSize="18sp"
            android:text="@string/line4"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_line5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lumberjack"
            android:padding="8dp"
            android:textColor="#6ab04c"
            android:textSize="18sp"
            android:text="@string/line5"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_line6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lumberjack"
            android:padding="8dp"
            android:textColor="#6ab04c"
            android:textSize="18sp"
            android:text="@string/line6"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_line7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lumberjack"
            android:padding="8dp"
            android:textColor="#6ab04c"
            android:textSize="18sp"
            android:text="@string/line7"
            android:textStyle="bold"
            />
        </LinearLayout>
    </ScrollView>

</LinearLayout>